--- a/static/views/register.html
+++ b/static/views/register.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>登录</title>
+  <title>注册</title>
 
   <!-- Bootstrap -->
   <link href="../lib/css/bootstrap.min.css" rel="stylesheet">
@@ -21,9 +21,7 @@
     .panel-modul{
       margin-top: 180px;
     }
-    .code-icon {
-      height: 34px;
-    }
+    
   </style>
 </head>
 
@@ -33,7 +31,7 @@
         <div class="col-md-6 col-md-offset-3">
 
           <div class="panel panel-default panel-primary panel-modul">
-            <div class="panel-heading">登录学生管理系统</div>
+            <div class="panel-heading">用户注册</div>
             <div class="panel-body">
 
               <form class="form-horizontal">
@@ -49,20 +47,10 @@
                     <input type="password" name="password" class="form-control" id="password" placeholder="请输入密码">
                   </div>
                 </div>
-                <div class="form-group">
-                  <label for="code" class="col-sm-2 control-label">验证码</label>
-                  <div class="col-sm-6">
-                    <input type="text" name="code" class="form-control" id="code" placeholder="请输入验证码">
-                  </div>
-                  <div class="col-sm-4">
-                    <img src="../img/code.PNG" class="code-icon" alt="">
-                  </div>
-                </div>
                 
                 <div class="form-group">
-                  <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">登录</button>
-                    <button type="submit" class="btn btn-danger">注册</button>
+                  <div class="col-sm-offset-2 col-sm-4">
+                    <button type="submit" class="btn btn-danger btn-block">注册</button>
                   </div>
                 </div>
               </form>
